# Gentlix-Bank-C

./: .gitignore  CMakeLists.txt  main.c  setup_ucrt64_env.bat
domain/: account.c  affiliate.c  date.c  transaction.c  userAccount.c
gui/: gui.c  gui.h
repository/: repository.c  repository.h
services/: services.c  services.h
